# argusapi.go
@@ -6,6 +6,55 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type HttpMonitor struct {
+	Headers             *[]Pair     `json:"headers,omitempty"`
+	AcceptedStatusCodes *[]string   `json:"acceptedStatusCodes,omitempty"`
+	Method              *HttpMethod `json:"method,omitempty"`
+	Url                 *string     `json:"url,omitempty"`
+	Interval            *int64      `json:"interval,omitempty"`
+	Timeout             *int64      `json:"timeout,omitempty"`
+	Retries             *int64      `json:"retries,omitempty"`
+}
+type HttpRequest struct {
+	Url     string      `json:"url"`
+	Headers *[]Pair     `json:"headers,omitempty"`
+	Method  *HttpMethod `json:"method,omitempty"`
+}
+type MonitoringRecordList struct {
+	Data       []MonitoringRecord `json:"data"`
+	Pagination Pagination         `json:"pagination"`
+}
+type MonitoringRecord struct {
+	ResponseTime *int64           `json:"responseTime,omitempty"`
+	Result       MonitoringResult `json:"result"`
+	Id           string           `json:"id"`
+	MonitorId    string           `json:"monitorId"`
+	CheckedAt    int64            `json:"checkedAt"`
+	StatusCode   string           `json:"statusCode"`
+}
+type CreateReservedRequest struct {
+	ExpiredAt *int64  `json:"expiredAt,omitempty"`
+	AccountId *string `json:"accountId,omitempty"`
+	StartAt   *int64  `json:"startAt,omitempty"`
+}
+type ReservedList struct {
+	Data       *[]Reserved `json:"data,omitempty"`
+	Pagination *Pagination `json:"pagination,omitempty"`
+}
+type PutMonitorRequest struct {
+	HttpMonitor *HttpMonitor   `json:"httpMonitor,omitempty"`
+	PingMonitor *PingMonitor   `json:"pingMonitor,omitempty"`
+	Name        *string        `json:"name,omitempty"`
+	Description *string        `json:"description,omitempty"`
+	Type        *MonitorType   `json:"type,omitempty"`
+	Status      *MonitorStatus `json:"status,omitempty"`
+}
+type PingMonitor struct {
+	Url      *string `json:"url,omitempty"`
+	Interval *int64  `json:"interval,omitempty"`
+	Timeout  *int64  `json:"timeout,omitempty"`
+	Retries  *int64  `json:"retries,omitempty"`
+}
 type Pair struct {
 	Left  string `json:"left"`
 	Right string `json:"right"`
@@ -15,55 +64,19 @@ type Reserved struct {
 	StartAt   int64  `json:"startAt"`
 	ExpiredAt int64  `json:"expiredAt"`
 }
-type PingMonitor struct {
-	Timeout  *int64  `json:"timeout,omitempty"`
-	Retries  *int64  `json:"retries,omitempty"`
-	Url      *string `json:"url,omitempty"`
-	Interval *int64  `json:"interval,omitempty"`
-}
-type MonitoringRecord struct {
-	Result       MonitoringResult `json:"result"`
-	Id           string           `json:"id"`
-	MonitorId    string           `json:"monitorId"`
-	CheckedAt    int64            `json:"checkedAt"`
-	StatusCode   string           `json:"statusCode"`
-	ResponseTime *int64           `json:"responseTime,omitempty"`
-}
-type MonitoringRecordList struct {
-	Data       []MonitoringRecord `json:"data"`
-	Pagination Pagination         `json:"pagination"`
-}
-type CreateReservedRequest struct {
-	AccountId *string `json:"accountId,omitempty"`
-	StartAt   *int64  `json:"startAt,omitempty"`
-	ExpiredAt *int64  `json:"expiredAt,omitempty"`
-}
-type HttpRequest struct {
-	Method  *HttpMethod `json:"method,omitempty"`
-	Url     string      `json:"url"`
-	Headers *[]Pair     `json:"headers,omitempty"`
+type Report struct {
+	Cron           *string         `json:"cron,omitempty"`
+	Period         *int64          `json:"period,omitempty"`
+	EmailReceivers *EmailReceivers `json:"emailReceivers,omitempty"`
 }
 type EmailReceivers struct {
 	To  []string `json:"to"`
 	Cc  []string `json:"cc"`
 	Bcc []string `json:"bcc"`
 }
-type ReservedList struct {
-	Data       *[]Reserved `json:"data,omitempty"`
-	Pagination *Pagination `json:"pagination,omitempty"`
-}
-type MonitorList struct {
-	Data       []Monitor  `json:"data"`
-	Pagination Pagination `json:"pagination"`
-}
-type HttpMonitor struct {
-	Timeout             *int64      `json:"timeout,omitempty"`
-	Retries             *int64      `json:"retries,omitempty"`
-	Headers             *[]Pair     `json:"headers,omitempty"`
-	AcceptedStatusCodes *[]string   `json:"acceptedStatusCodes,omitempty"`
-	Method              *HttpMethod `json:"method,omitempty"`
-	Url                 *string     `json:"url,omitempty"`
-	Interval            *int64      `json:"interval,omitempty"`
+type Notification struct {
+	Type           NotificationType `json:"type"`
+	EmailReceivers *EmailReceivers  `json:"emailReceivers,omitempty"`
 }
 type Pagination struct {
 	Index int64 `json:"index"`
@@ -71,70 +84,36 @@ type Pagination struct {
 	Total int64 `json:"total"`
 }
 type Monitor struct {
-	Retries              int64          `json:"retries"`
-	Method               *HttpMethod    `json:"method,omitempty"`
-	Headers              *[]Pair        `json:"headers,omitempty"`
-	Name                 string         `json:"name"`
-	Interval             int64          `json:"interval"`
-	NotificationInterval int64          `json:"notificationInterval"`
-	Id                   string         `json:"id"`
-	Url                  string         `json:"url"`
-	AcceptedStatusCodes  *[]string      `json:"acceptedStatusCodes,omitempty"`
-	Notifications        []Notification `json:"notifications"`
-	Type                 MonitorType    `json:"type"`
-	Timeout              int64          `json:"timeout"`
-	Description          string         `json:"description"`
-	Status               MonitorStatus  `json:"status"`
+	PingMonitor *PingMonitor `json:"pingMonitor,omitempty"`
+	Id          string       `json:"id"`
+	Name        string       `json:"name"`
+	Description string       `json:"description"`
+	Type        MonitorType  `json:"type"`
+	HttpMonitor *HttpMonitor `json:"httpMonitor,omitempty"`
 }
-type PutMonitorRequest struct {
-	Status      *MonitorStatus `json:"status,omitempty"`
-	HttpMonitor *HttpMonitor   `json:"httpMonitor,omitempty"`
-	PingMonitor *PingMonitor   `json:"pingMonitor,omitempty"`
-	Name        *string        `json:"name,omitempty"`
-	Description *string        `json:"description,omitempty"`
-	Type        *MonitorType   `json:"type,omitempty"`
+type MonitorList struct {
+	Pagination Pagination `json:"pagination"`
+	Data       []Monitor  `json:"data"`
 }
-type Report struct {
-	Cron           *string         `json:"cron,omitempty"`
-	Period         *int64          `json:"period,omitempty"`
-	EmailReceivers *EmailReceivers `json:"emailReceivers,omitempty"`
-}
-type Notification struct {
-	EmailReceivers *EmailReceivers  `json:"emailReceivers,omitempty"`
-	Type           NotificationType `json:"type"`
-}
-type MonitorStatus string
+type NotificationType string
 
-const ACTIVED MonitorStatus = "ACTIVED"
-const DISACTIVED MonitorStatus = "DISACTIVED"
-
-type BodyForm string
-
-const RAW BodyForm = "RAW"
-const X_WWW_FORM_URLENCODED BodyForm = "X_WWW_FORM_URLENCODED"
+const EMAIL NotificationType = "EMAIL"
 
 type MonitorType string
 
 const HTTP MonitorType = "HTTP"
 const PING MonitorType = "PING"
 
-type HttpMethod string
+type BodyForm string
 
-const HEAD HttpMethod = "HEAD"
-const GET HttpMethod = "GET"
-const POST HttpMethod = "POST"
-const PUT HttpMethod = "PUT"
-const PATCH HttpMethod = "PATCH"
+const RAW BodyForm = "RAW"
+const X_WWW_FORM_URLENCODED BodyForm = "X_WWW_FORM_URLENCODED"
 
 type MonitoringResult string
 
 const OK MonitoringResult = "OK"
 const TIMEOUT MonitoringResult = "TIMEOUT"
 const DOWN MonitoringResult = "DOWN"
-
-type NotificationType string
-
-const EMAIL NotificationType = "EMAIL"
 
 type Ordering string
 
@@ -146,6 +125,19 @@ type ContentType string
 const TEXT ContentType = "TEXT"
 const JSON ContentType = "JSON"
 const XML ContentType = "XML"
+
+type HttpMethod string
+
+const HEAD HttpMethod = "HEAD"
+const GET HttpMethod = "GET"
+const POST HttpMethod = "POST"
+const PUT HttpMethod = "PUT"
+const PATCH HttpMethod = "PATCH"
+
+type MonitorStatus string
+
+const ACTIVED MonitorStatus = "ACTIVED"
+const DISACTIVED MonitorStatus = "DISACTIVED"
 
 type MonitorApiInterface interface {
 	CreateMonitor(gin_context *gin.Context, gin_body PutMonitorRequest)
